# artegame

./: .gitignore  .pylintrc  LICENSE.txt  README.md  architect.bat  build.zig  build.zig.zon  dockerfile  loom.bat  loom.toml  pyproject.toml  pyrightconfig.json
.VSCodeCounter/2024-06-01_13-20-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-06-05_20-34-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-06-05_22-21-31/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-06-07_00-39-10/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-06-09_21-23-15/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
[DEMO]Arte-Game-Saves/: save.json
architect/: __config__.py  __main__.py  add_scripts.py  architect.py  architect_main.py  b64encoder.py  cli.py  deps.py  import_generator.py  mn.py  req.py  util.py
brass/: __init__.py  __main__.py  animator.py  assets.py  audio.py  audio_helper.py  base.py  classes.py  collision.py  display.py  entities.py  events.py  files.py  gui.py  img.py  inpt.py  input.py  input_handler.py  inputh.py  item_funcs.py  items.py  load.py  pgapi.py  render.py  repulse.py  saves.py  scene.py  scenenum.py  structures.py  timeout.py  ui.py  vectormath.py
src/: __init__.py  main.zig
(+120 files in other folders)
