[project]
name = "Artegame"
version = "2.0"
requires-python = ">=3.12.7"
maintainers = [{ name = "zewenn", email = "zc.fallens@gmail.com" }]
description = "A school project and a pretty fun game too!"
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = ["Programming Language :: Python"]

[tool.pyright]
